fix: Добавить свойство text-overflow для profile
Сделать при переполненные текста в блоки его скрытие тремя точками

--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,12 +4,17 @@
   grid-row-start: 1;
   grid-row-end: 2;
 
-  margin: 0;
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
   line-height: 56px;
   color: #fff;
+
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+
+  margin: 0;
 }
 
 @media screen and (max-width: 900px) {
